--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 AUTH_SECRET=capstoneproject
+DATABASE_URI=mongodb+srv://shreyask:8ypnZptQV9rOtup5@ipfs.3vp5w97.mongodb.net/?retryWrites=true&w=majority
