--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
     "bcrypt": "^5.1.0",
+    "ipfs-http-client": "^60.0.0",
     "mongoose": "^6.10.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -38,11 +39,12 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
+    "@nestjs/cli": "^9.2.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.11",
