--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
     "@types/passport-local": "^1.0.35",
+    "@types/speakeasy": "^2.0.7",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
